// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package db;

option go_package = "dbpb";


// UserDB - All methods for managing users in DB.
service UserDB {
        // Users - Get users.
        rpc GetUsers(User) returns (Users);
        // AddUser - Add a user.
        rpc AddUsers(AddUser) returns (Added);
        // UpdateUser - Update properties of a user.
        rpc UpdateUsers(UpdateUser) returns (Updated);
        // DeleteUsers - Delete one or more users.
        rpc DeleteUsers(DeleteUser) returns (Deleted);
}

// User - A Wiregost user
message User {
        uint32 ID = 1;
        string Name = 2;
        bool Online = 3;
        bytes Password = 4;
        bool Admin = 5;
}


// Users - A list of users
message Users {
        repeated User Users = 1;
}

// AddUser - Add a user.
message AddUser {
        User User = 1;
        bool WithConsoleFile = 2;
        bool WithServerDefault = 3;
        bool WithConsole = 4;
        string BinaryName = 5;
        bool Send = 6;
}

message Added {
        User User = 1;
        bytes ConsoleBinary = 2;
}

// DeleteUser - Delete one or more users.
message DeleteUser {
        User User = 1;
        bool Disconnect = 2;
}

message Deleted {
        repeated User Users = 1;
        bool Disconnected = 2;
}

// UpdateUser - Update a user.
message UpdateUser {
        User User = 1;
}

message Updated {
        User User = 1;
}
