// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package ghost.core;

option go_package = "corepb";

// ls 
message LsRequest {
        uint32 GhostID =1;
        string Path = 2;
}

message Ls{
        string Path = 1;
        bool Exists = 2;
        repeated FileInfo Files = 3;
}

message FileInfo {
        string Name = 1;
        bool IsDir = 2;
        int64 Size = 3;
        int32 FileMode = 4;         // User and permission bits
        string ModTime = 5;         // Last modification timestamp
}

// pwd
message PwdRequest {
        uint32 GhostID = 1;
}

message Pwd{
        string Path = 1;
        string Err = 2;
}

// cd
message CdRequest {
        uint32 GhostID = 1;
       string Path = 2;
}

// rm
message RmRequest {
        uint32 GhostID = 1;
        string Path = 2;
}

message Rm {
        bool Success = 1;
        string Path = 2;
        string Err = 3;
}

// mkdir
message MkdirRequest {
        uint32 GhostID = 1;
        string Path = 2;
}

message Mkdir {
        bool Success = 1;
        string Path = 2;
        string Err = 3;
}

// download
message DownloadRequest {
        uint32 GhostID = 1;
        string Path = 2;
}

message Download {
        string Path = 1;
        string Encoder = 2;
        bool Exists = 3;
        bytes Content = 9;
}

// upload
message UploadRequest {
        uint32 GhostID = 1;
        string Path = 2;
        string Encoder = 3;
        bytes Content = 4;
}

message Upload {
        bool Success = 1;
        string Path = 2;
        string Err = 3;
}
